update checking-tool-rcl with html fix

--- a/src/data/locales/Naga Pidgin-nag_IN.json
+++ b/src/data/locales/Naga Pidgin-nag_IN.json
@@ -1,4 +1,3 @@
-const locale_ =
 {
   "menu": {
     "no_results": "No results",
@@ -18,14 +17,14 @@ const locale_ =
     "reset_button": "Reset",
     "save_button": "Save",
     "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "discard_changes": "Bodli kurakhanke chari dibi"
   },
   "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
   "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
   "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
-  "quote_invalid": "Invalid Original Language Quote for Check: '${quote}'",
-  "nothing_to_select_description": "When selected, the check will be marked as complete. Use when the translation is correct but a selection cannot be made.",
-  "selections_invalidated": "Some selections are no longer valid and are removed.",
+  "quote_invalid": "Praman kuribole thik nohua ashol bhasa laga khisa: '${quote}'",
+  "nothing_to_select_description": "Jetiya chuni lobo, chuni lowa khanke sampurna huwa mani lobo. Jetiya bhasa bodli kura tu thik ashe tetiya he itu chunibi kintu ene chunibole naparibo.",
+  "selections_invalidated": "Kunuba chunibole lagiya khantu etiya thik nohua hoise itu karne utukhan ke hatai diya hoise.",
   "see_more": "See more",
   "select": "Select",
   "step2_check": "Step 2. Check",
@@ -35,8 +34,8 @@ const locale_ =
   "save_continue": "Save & Continue",
   "empty_verse": "No selection can be made because the verse is blank.<br/>You may fix this by editing the verse.<br/>If desired, you may also leave a comment or bookmark this check.",
   "no_selection": "No selection has been made.<br/>Click the Select button, then select the translation for this check.",
-  "no_selection_needed_description": "No selection has been made.<br/>This check has been marked as:",
-  "no_selection_needed": "No selection needed",
+  "no_selection_needed_description": "Ekubi chuniya huwa nai.<br/>Itu chuniya tu enika ashe:",
+  "no_selection_needed": "Eku chunibole nalage",
   "please_select": "Please select the translation for:",
   "selection_invalidated": "The selection for this check was invalidated.",
   "invalidated_tooltip": "A selection is invalidated if the words selected were then edited.",
@@ -74,7 +73,7 @@ const locale_ =
     "bookmarked": "This check has been bookmarked for review",
     "not_bookmarked": "This check has not been bookmarked for review"
   },
-  "select_too_many": "Click a previous selection to remove it before adding a new one. To select more than ${maximum} words, highlight phrases instead of individual words.",
+  "select_too_many": "Nautun halibole karne agete chuniya tu click kuribi. Arubi ${maximum} pora bishi kotha khan chunibole karne, nijor bekti kotha khan nohoikena ashol kotha khan he.",
   "oops": "Oops!",
   "pane": {
     "current_project": "Current project",
@@ -86,9 +85,9 @@ const locale_ =
     "add_resource": "Click to add a resource",
     "add_resource_label": "Add Resources",
     "select_language": "Select language",
-    "gateway_language": "Gateway Language",
-    "target_language": "Target Language",
-    "original_language": "Original Language",
+    "gateway_language": "Rasta khuli diya bhasa",
+    "target_language": "Laksya bhasa",
+    "original_language": "Ashol bhasa",
     "select_font_label": "Select Font"
   },
   "lemma": "Lemma:",
@@ -171,44 +170,44 @@ const locale_ =
   "superlatives": "Superlative",
   "indeclinable": "Indeclinable",
   "diminutive": "Diminutive",
-  "suffix": "Suffix",
-  "cardinal_number": "Cardinal Number",
-  "gentilic": "Gentilic",
-  "ordinal_number": "Ordinal Number",
-  "both_genders": "Both Genders",
-  "common_gender": "Common Gender",
-  "common": "Common",
-  "proper_name": "Proper Name",
-  "dual": "Dual",
-  "affirmation": "Affirmation",
-  "definite_article": "Definite Article",
-  "exhortation": "Exhortation",
-  "negative": "Negative",
-  "direct_object_marker": "Direct Object Marker",
-  "absolute": "Absolute",
-  "construct": "Construct",
-  "determined": "Determined",
-  "directional_he": "Directional He",
-  "paragogic_he": "Paragogic He",
-  "paragogic_nun": "Paragogic Nun",
-  "pronominal": "Pronominal",
-  "perfect_qatal": "Perfect (Qatal)",
-  "sequential_perfect_weqatal": "Sequential Perfect (Weqatal)",
-  "imperfect_yiqtol": "Imperfect (Yiqtol)",
-  "sequential_imperfect_wayyiqtol": "Sequential Imperfect (Wayyiqtol)",
-  "cohortative": "Cohortative",
-  "jussive": "Jussive",
-  "participle_active": "Participle Active",
-  "participle_passive": "Participle Passive",
-  "infinitive_absolute": "Infinitive Absolute",
-  "infinitive_construct": "Infinitive Construct",
-  "qal": "Qal",
-  "niphal": "Niphal",
-  "piel": "Piel",
-  "pual": "Pual",
-  "hiphil": "Hiphil",
-  "hophal": "Hophal",
-  "hithpael": "Hithpael",
+  "suffix": "Juri diya",
+  "cardinal_number": "Ashol nombor",
+  "gentilic": "Dusra jati laga",
+  "ordinal_number": "Hisab kura nombor",
+  "both_genders": "Duita gendar bi",
+  "common_gender": "Samanya gendar",
+  "common": "Samanya",
+  "proper_name": "Thikthak nam",
+  "dual": "Duita motlobia",
+  "affirmation": "Samarthan kura",
+  "definite_article": "Bisesh lekha",
+  "exhortation": "Udogai dia nohole ba uncha sahos kuri diya",
+  "negative": "Ulta matlob",
+  "direct_object_marker": "Sidha kotha laga sinn",
+  "absolute": "Ekdaam thik",
+  "construct": "Bonuwa",
+  "determined": "Kiba kuribole mon manai lowa",
+  "directional_he": "Rasta dikhai dibole tai",
+  "paragogic_he": "Tai bisi samanya",
+  "paragogic_nun": "Samanya dharmik maiki",
+  "pronominal": "Nam hali diya",
+  "perfect_qatal": "Uttam nohole ba sabse bhal (Qatal)",
+  "sequential_perfect_weqatal": "Ekta piche ekta uttam (Weaatal)",
+  "imperfect_yiqtol": "Apurno nohole ba adhura (Yiqtol)",
+  "sequential_imperfect_wayyiqtol": "Ekta piche ekta adhura (Wayyiqtol)",
+  "cohortative": "Mon dangor kuri diya",
+  "jussive": "Mani lowa",
+  "participle_active": "Hodai bebohar kurya jug kotha khan",
+  "participle_passive": "Hodai bebohar kurya jug kotha khan jenekoi, dwara",
+  "infinitive_absolute": "Apurna uttam, gramar hisapte, jeneke; jaboi lage nohole ba koriboi lage",
+  "infinitive_construct": "Apurna uttam bonuwa",
+  "qal": "Qal toh Hebrew bhasa laga verb ashe jun laga dwara sankhya gonti koribo pare jeneke, ek-jon nohole dui-jon",
+  "niphal": "Dwara",
+  "piel": "Dwara",
+  "pual": "Hebrew grammar te bebohar hua 'dwara'",
+  "hiphil": "Karon",
+  "hophal": "Bisesh karon, jun karon pora kiba hobole diye",
+  "hithpael": "Hebrew grammar te nijor ke kiba koribole thakia  laga kotha koa jeneke, 'ami nijor ke' murabole ase, itu Hithpael koi",
   "hithpolel": "Hithpolel",
   "polel": "Polel",
   "polal": "Polal",
@@ -251,5 +250,3 @@ const locale_ =
   "morph_missing": "Morphology not found",
   "unsaved_changes": "You have unsaved changes."
 }
-
-export const locale = locale_
