--- a/src/data/locales/Vietnamese-vi_VN.json
+++ b/src/data/locales/Vietnamese-vi_VN.json
@@ -1,4 +1,3 @@
-const locale_ =
 {
   "menu": {
     "no_results": "No results",
@@ -15,10 +14,10 @@ const locale_ =
     "ok_button": "OK",
     "back_button": "Go Back",
     "cancel_button": "Cancel",
-    "reset_button": "Reset",
+    "reset_button": "Cài lại",
     "save_button": "Save",
     "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "discard_changes": "Loại bỏ những thay đổi"
   },
   "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
   "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
@@ -251,5 +250,3 @@ const locale_ =
   "morph_missing": "Morphology not found",
   "unsaved_changes": "You have unsaved changes."
 }
-
-export const locale = locale_
