--- a/src/data/locales/Nepali-ne_NP.json
+++ b/src/data/locales/Nepali-ne_NP.json
@@ -1,23 +1,66 @@
 {
   "menu": {
-    "no_results": "No results",
+    "no_results": "कुनै परिणाम छैन",
     "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
+    "bookmarks": "बुकमार्कहरू",
     "selected": "Selected",
-    "no_selection": "No selection",
+    "no_selection": "अचयनीत",
     "verse_edit": "Verse edit",
     "comments": "Comments",
-    "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "menu": "सुची",
+    "grouping": "Organize by Reference",
+    "select_locale": "लोकेली चयन गर्नुहोस्"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "ठीक",
     "back_button": "Go Back",
-    "cancel_button": "Cancel",
-    "reset_button": "Reset",
-    "save_button": "Save",
+    "cancel_button": "रद्द गर्नुहोस्",
+    "reset_button": "रिसेट गर्नुहोस",
+    "save_button": "बचत",
     "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "discard_changes": "Discard Changes",
+    "close_button": "बन्द",
+    "yes_button": "YES",
+    "no_button": "NO"
+  },
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "लक्ष्य भाषा छान्नुहोस्",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
   },
   "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
   "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
