--- a/src/data/locales/Odia-or_IN.json
+++ b/src/data/locales/Odia-or_IN.json
@@ -7,21 +7,64 @@
     "no_selection": "କିଛି ଚୟନ ହୋଇନାହିଁ",
     "verse_edit": "ପଦର ସଂଶୋଧନ",
     "comments": "ମନ୍ତବ୍ୟଗୁଡିକ",
-    "menu": "ତାଲିକା",
-    "grouping": "Organize by Reference"
+    "menu": "ମେନ୍ୟୁ",
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "ଠିକ୍ ଅଛି",
     "back_button": "ପଛକୁ ଯାଆନ୍ତୁ",
     "cancel_button": "ରଦ୍ଦ କରନ୍ତୁ",
-    "reset_button": "Reset",
+    "reset_button": "ପୁନଃସେଟ୍",
     "save_button": "ସୁରକ୍ଷିତ ରଖନ୍ତୁ",
     "next_button": "ପରବର୍ତ୍ତୀ",
-    "discard_changes": "ପରିବର୍ତ୍ତନଗୁଡିକୁ ପ୍ରତ୍ୟାଖ୍ୟାନ କରନ୍ତୁ"
+    "discard_changes": "ପରିବର୍ତ୍ତନଗୁଡିକୁ ପ୍ରତ୍ୟାଖ୍ୟାନ କରନ୍ତୁ",
+    "close_button": "ବନ୍ଦ କରନ୍ତୁ",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "\"ଆପଣଙ୍କ ପ୍ରୋଜେକ୍ଟରେ ପରିବର୍ତ୍ତନଗୁଡିକ ମିଳିଅଛି ଯାହା ଆପଣଙ୍କର କେତେକ ଏଲାଇନ୍‍‍ମେଣ୍ଟକୁ ଅବୈଧ କରିଅଛି। ଏହି ପଦଗୁଡିକ ପାର୍ଶ୍ଵରେ ଥିବା ତାଲିକାର ପରବର୍ତ୍ତୀ ପ୍ରସଙ୍ଗରେ ଭଙ୍ଗା ଶିକୁଳିର ଏକ ଚିତ୍ରସଙ୍କେତ ପରି ଦେଖାଦିଏ।\"",
+  "invalid_verse_alignments_and_selections": "\"ଆପଣଙ୍କ ପ୍ରୋଜେକ୍ଟରେ ପରିବର୍ତ୍ତନଗୁଡିକ ମିଳିଅଛି ଯାହା ଆପଣଙ୍କର କେତେକ ଏଲାଇନ୍‍‍ମେଣ୍ଟକୁ ଅବୈଧ କରିଅଛି। ଏହି ପଦଗୁଡିକ ପାର୍ଶ୍ଵରେ ଥିବା ତାଲିକାର ପରବର୍ତ୍ତୀ ପ୍ରସଙ୍ଗରେ ଭଙ୍ଗା ଶିକୁଳିର ଏକ ଚିତ୍ରସଙ୍କେତ ପରି ଦେଖାଦିଏ।\"",
+  "invalidation_checking": "\"ଏହା ଯାଞ୍ଚ ହେଉଅଛି ଯଦି ଏହି ସଂରକ୍ଷିତ କରାଯାଇଥିବା ଚୟନ କିମ୍ବା ସଂରେକ୍ଷଣର ସହିତ ତ୍ରୁଟିକୁ ସମ୍ପାଦିତ କରେ...\"",
   "quote_invalid": "ପରୀକ୍ଷା କରିବା ପାଇଁ ମୂଳ ଭାଷାର ଉଦ୍ଧୃତି ଚିହ୍ନକୁ ଅବୈଧ କରନ୍ତୁ: '${quote}'",
   "nothing_to_select_description": "ଚୟନ କରାଯିବା ପରେ, ଚେକ୍ ପୂର୍ଣ୍ଣ ରୂପରେ ଚିହ୍ନିତ ହେବ। ଯଦି ଅନୁବାଦ ସଠିକ୍ ଅଛି ତେବେ ବ୍ୟବହାର କରନ୍ତୁ କିନ୍ତୁ ମନୋନୟନ କରାଯାଇ ପାରିବ ନାହିଁ।  ",
   "selections_invalidated": "ବର୍ତ୍ତମାନ କେତେକ ଚୟନଗୁଡିକ ବୈଧ ନୁହେଁ ଏବଂ ସେଗୁଡିକୁ ହଟାଇ ଦିଆଯାଇଅଛି।",
@@ -55,7 +98,7 @@
   "next_change_reason": "ପରବର୍ତ୍ତୀ, ପରିବର୍ତ୍ତନର କାରଣ(ଗୁଡିକୁ) ଚୟନ କରନ୍ତୁ",
   "first_make_change": "ପ୍ରଥମେ, ଉପରେ ଥିବା ପଦରେ ପରିବର୍ତ୍ତନ କରନ୍ତୁ",
   "close": "ବନ୍ଦ କରନ୍ତୁ",
-  "load": "Load",
+  "load": "ଲୋଡ୍",
   "attention": "ଧ୍ୟାନ:",
   "select_translation": "ଦୟାକରି ଆପଣଙ୍କ ବର୍ତ୍ତମାନର ଯାଞ୍ଚ ନିମନ୍ତେ ${span} ସଠିକ୍ ଅନୁବାଦକୁ ${span} ଚୟନ କରନ୍ତୁ।",
   "can_skip": "ଯଦି ଆପଣ ଏହି ଯାଞ୍ଚ କରିବାକୁ ଅସମର୍ଥ ଅଟନ୍ତି, ତେବେ ଆପଣ ${span} ଏହାକୁ ଛାଡି ପାରିବେ ${span} ପୁଣି ପରେ ପୁନର୍ବାର ଏଠାକୁ ଆସି ପାରିବେ।",
@@ -81,14 +124,14 @@
     "title": "ପ୍ରଥମ ପଦକ୍ଷେପ. ପଢନ୍ତୁ",
     "expand_hover": "ବିସ୍ତାରିତ ସମ୍ବଳ ଫଳକଗୁଡିକୁ ଦେଖାଇବା ପାଇଁ କ୍ଲିକ୍ କରନ୍ତୁ",
     "remove_resource": "ସମ୍ବଳକୁ ହଟାଇବା ପାଇଁ କ୍ଲିକ୍ କରନ୍ତୁ",
-    "remove_resource_label": "Remove resource",
+    "remove_resource_label": "ସମ୍ବଳ ଅପସାରଣ କରନ୍ତୁ",
     "add_resource": "ସମ୍ବଳକୁ ଯୋଗ କରିବା ପାଇଁ କ୍ଲିକ୍ କରନ୍ତୁ",
     "add_resource_label": "ସମ୍ବଳଗୁଡିକୁ ଯୋଗ କରନ୍ତୁ",
     "select_language": "ଭାଷାକୁ ଚୟନ କରନ୍ତୁ",
     "gateway_language": "ଗେଟ୍‍‍ୱେ ଭାଷା",
     "target_language": "ଟାର୍ଗେଟ୍ ଭାଷା",
     "original_language": "ମୂଳ ଭାଷା",
-    "select_font_label": "Select Font"
+    "select_font_label": "ଫଣ୍ଟ ଚୟନ କରନ୍ତୁ"
   },
   "lemma": "ଲେମ୍ମା:",
   "morphology": "ପଦବିଜ୍ଞାନ:",
@@ -168,7 +211,7 @@
   "error": "ତ୍ରୁଟି",
   "comparative": "ତୁଳନାତ୍ମକ",
   "superlatives": "ସର୍ବଶ୍ରେଷ୍ଠ",
-  "indeclinable": "Indeclinable",
+  "indeclinable": "ଧ୍ଵନି ପରିବର୍ତ୍ତିତ ହେଉ ନ ଥିବା (ଶବ୍ଦ ସଂପର୍କରେ)",
   "diminutive": "ଅତିକ୍ଷୁଦ୍ର",
   "suffix": "ଅନ୍ତ୍ୟପ୍ରତ୍ୟୟ",
   "cardinal_number": "ଗଣନ ସଂଖ୍ୟା",
