--- a/src/data/locales/Punjabi-pa_IN.json
+++ b/src/data/locales/Punjabi-pa_IN.json
@@ -8,20 +8,63 @@
     "verse_edit": "ਆਇਤ ਸੋਧ",
     "comments": "ਟਿੱਪਣੀਆਂ",
     "menu": "ਮੀਨੂ",
-    "grouping": "Organize by Reference"
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "ਠੀਕ ਹੈ",
     "back_button": "ਪਿੱਛੇ ਜਾਓ",
     "cancel_button": "ਰੱਦ ਕਰਨਾ",
-    "reset_button": "Reset",
+    "reset_button": "ਰੀਸੈੱਟ ਕਰੋ",
     "save_button": "ਸੰਭਾਲੋ",
     "next_button": "ਅਗਲਾ",
-    "discard_changes": "ਤਬਦੀਲੀਆਂ ਰੱਦ ਕਰੋ |"
+    "discard_changes": "ਤਬਦੀਲੀਆਂ ਰੱਦ ਕਰੋ |",
+    "close_button": "ਬੰਦ ਕਰੋ",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "ਤੁਹਾਡੇ ਪ੍ਰੋਜੈਕਟ ਵਿਚ ਤਬਦੀਲੀਆਂ ਦਾ ਪਤਾ ਲਗਾਇਆ ਗਿਆ ਹੈ ਜਿਸ ਨੇ ਤੁਹਾਡੀਆਂ ਕੁਝ ਅਲਾਈਨਮੈਂਟਾਂ ਨੂੰ ਅਯੋਗ ਕਰ ਦਿੱਤਾ ਹੈ | ਇਹ ਆਇਤਾਂ ਸਾਈਡ ਮੀਨੂੰ ਵਿਚ ਹਵਾਲੇ ਦੇ ਅੱਗੇ ਇਕ ਟੁੱਟੀ ਲੜੀ ਦਾ ਇਕ ਆਈਕਾਨ ਪ੍ਰਦਰਸ਼ਿਤ ਕਰਦੀਆਂ ਹਨ |.",
+  "invalid_verse_alignments_and_selections": "ਤੁਹਾਡੇ ਪ੍ਰੋਜੈਕਟ ਵਿਚ ਤਬਦੀਲੀਆਂ ਦਾ ਪਤਾ ਲਗਾਇਆ ਗਿਆ ਹੈ ਜਿਸ ਨੇ ਕੁਝ ਚੋਣਾਂ ਅਤੇ ਕੁਝ ਅਲਾਈਨਮੈਂਟਾਂ ਨੂੰ ਅਯੋਗ ਕਰ ਦਿੱਤਾ ਹੈ. ਇਹ ਆਇਤਾਂ ਸਾਈਡ ਮੇਨੂ ਵਿਚ ਹਵਾਲੇ ਦੇ ਅੱਗੇ ਇਕ ਟੁੱਟੀਆਂ ਚੇਨ ਦਾ ਇਕ ਆਈਕਾਨ ਪ੍ਰਦਰਸ਼ਿਤ ਕਰਦੀਆਂ ਹਨ.",
+  "invalidation_checking": "\nਜਾਂਚ ਕੀਤੀ ਜਾ ਰਹੀ ਹੈ ਕਿ ਇਹ ਸੰਪਾਦਤ ਸੁਰੱਖਿਅਤ ਕੀਤੀਆਂ ਚੋਣਾਂ ਅਤੇ ਅਲਾਈਨਮੈਂਟਸ ਨਾਲ ਟਕਰਾਉਂਦਾ ਹੈ ...",
   "quote_invalid": "ਗਲਤ ਮੂਲ ਭਾਸ਼ਾ ਹਵਾਲਾ ਲਈ ਚੈੱਕ ਕਰੋ: '${quote}'",
   "nothing_to_select_description": "ਜਦੋਂ ਚੁਣਿਆ ਜਾਵੇਗਾ, ਤਾਂ ਚੈੱਕ ਨੂੰ ਮੁਕੰਮਲ ਹੋਇਆ ਦੇ ਤੋਰ ਤੇ ਵਰਤਿਆ ਜਾਵੇਗਾ | ਜਦੋਂ ਅਨੁਵਾਦ ਸਹੀ ਹੋਵੇ ਤਾਂ ਵਰਤੋ ਪਰ ਚੁਣਿਆ ਨਹੀਂ ਜਾ ਸਕਦਾ |.",
   "selections_invalidated": "ਕੁਝ ਚੋਣਾਂ ਵੈਧ ਨਹੀਂ ਹੁੰਦੀਆਂ ਹਨ ਅਤੇ ਹਟਾ ਦਿੱਤੀਆਂ ਜਾਂਦੀਆਂ ਹਨ.",
