--- a/src/data/locales/Russian-ru_RU.json
+++ b/src/data/locales/Russian-ru_RU.json
@@ -8,7 +8,8 @@
     "verse_edit": "Редактировать стих",
     "comments": "Комментарии",
     "menu": "Меню",
-    "grouping": "Организовать по ссылке"
+    "grouping": "Организовать по ссылке",
+    "select_locale": "Выберите язык"
   },
   "buttons": {
     "ok_button": "OK",
@@ -17,7 +18,49 @@
     "reset_button": "Сброс",
     "save_button": "Сохранить",
     "next_button": "Далее",
-    "discard_changes": "Не сохранять"
+    "discard_changes": "Не сохранять",
+    "close_button": "Закрыть",
+    "yes_button": "ДА",
+    "no_button": "НЕТ"
+  },
+  "prompts": {
+    "createNewOlCheck": "Создать новый проект проверки",
+    "downloadCatalog": "Вы хотите загрузить текущий каталог?",
+    "selectTargetLanguage": "Выберите целевой язык:",
+    "selectOrganization": "Выберите целевую организацию:",
+    "selectTargetBible": "Выберите целевую Библию:",
+    "selectTargetBook": "Выберите целевую книгу:",
+    "selectGatewayLanguage": "Выберите язык проверки шлюза:",
+    "selectGatewayOwner": "Выберите языковую организацию Шлюза для проверки:"
+  },
+  "status": {
+    "downloadingCatalog": "Загрузка текущего каталога",
+    "catalogDownloadError": "Ошибка загрузки обновленного каталога ресурсов!",
+    "creatingCheckingProject": "Создание проверяющего проекта",
+    "noLanguage": "Язык не выбран!",
+    "languageSelected": "Язык выбранный ${targetLanguagePick}",
+    "noOwner": "Не выбран владелец цели!",
+    "ownerSelected": "Библия цели выбрана ${targetOwnerPick}",
+    "noBible": "Библия не выбрана!",
+    "bibleSelected": "Библия цели выбрана ${targetBibleIdPick}",
+    "noBook": "Целевая книга не выбрана!",
+    "bookSelected": "Целевая книга выбрана ${targetBookPick}",
+    "noCheckingLanguage": "Язык проверки шлюза не выбран!",
+    "glSelected": "Язык проверки шлюза выбранный  ${gwLanguagePick}",
+    "noGlOwner": "Не выбрана организация языковой проверки шлюза!",
+    "glOwnerSelected": "Проверка языковой организации шлюза выбрана  ${gwOwnerPick}",
+    "creatingProject": "Создание проверяющего проекта",
+    "glResourceDownloadError": "Ошибка загрузки языковых ресурсов шлюза!",
+    "downloadingTargetBible": "Загрузка целевой библии ${targetBible}",
+    "targetBibleDownloadError": "Ошибка загрузки целевой Библии!",
+    "errorCreatingProject": "Не удалось создать проверяющий проект",
+    "successCreatingProject": "Успешно инициализирован проект ${repoPath}",
+    "checkingInstructions": "Теперь вы можете проверить, открыв проверку translationWords на проверках `checking/twl` или translationNotes в `checking/tn`",
+    "resourceMissing": "Отсутствует проверка ресурсов.",
+    "bibleMissing": "Целевая библея отсутствует для ${bookId}.",
+    "invalidCheckingFile": "Пустой файл проверки: ${checksPath}",
+    "uploadError": "${message}. Репо находится в ${url}",
+    "uploadSuccess": "Успешно загружено на ${url}"
   },
   "alignments_reset_wa_tool": "В вашем проекте были обнаружены изменения, которые аннулировали некоторые из ваших сопоставлений. Такие стихи имеют иконку сломанной цепочки рядом с ссылкой в боковом меню.",
   "invalid_verse_alignments_and_selections": "В вашем проекте были обнаружены изменения, которые аннулировали некоторые из ваших отметок и сопоставлений. Такие стихи имеют иконку сломанной цепочки рядом с ссылкой в боковом меню.",
