--- a/src/data/locales/Tamil-ta_IN.json
+++ b/src/data/locales/Tamil-ta_IN.json
@@ -1,65 +1,108 @@
 {
   "menu": {
-    "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
-    "verse_edit": "Verse edit",
-    "comments": "Comments",
-    "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "no_results": "முடிவுகள் இல்லை.",
+    "invalidated": "செல்லாததாக்கப்படுகிறது",
+    "bookmarks": "அடையாளக்குறிகள்",
+    "selected": "தேர்ந்தெடு",
+    "no_selection": "தேர்வு இல்லை\n",
+    "verse_edit": "வசனம் திருத்த",
+    "comments": "கருத்துரைகள்",
+    "menu": "பட்டி",
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
-    "back_button": "Go Back",
-    "cancel_button": "Cancel",
-    "reset_button": "Reset",
-    "save_button": "Save",
-    "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "ok_button": "சரி",
+    "back_button": "திரும்பிச் செல்லுங்கள்",
+    "cancel_button": "ரத்துசெய்",
+    "reset_button": "மறுஅமை",
+    "save_button": "சேமிக்கவும்",
+    "next_button": "அடுத்து",
+    "discard_changes": "Discard Changes",
+    "close_button": "மூடுவும்",
+    "yes_button": "ஆம்",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "உங்கள் திட்டத்தில் மாற்றங்கள் கண்டறியப்பட்டுள்ளன, அவை உங்கள் சில சீரமைப்புகளை செல்லாது.\nஇந்த வசனங்கள் பக்க மெனுவில் உள்ள குறிப்புக்கு அடுத்து உடைந்த சங்கிலியின் ஐகானைக் காண்பிக்கும்.\n",
+  "invalid_verse_alignments_and_selections": "உங்கள் திட்டத்தில் மாற்றங்கள் கண்டறியப்பட்டுள்ளன, அவை சில தேர்வுகள் மற்றும் சில சீரமைப்புகளை செல்லாது. இந்த வசனங்கள் பக்க மெனுவில் உள்ள குறிப்புக்கு அடுத்து உடைந்த சங்கிலியின் ஐகானைக் காண்பிக்கும்.",
+  "invalidation_checking": "இந்த திருத்தம் சேமித்த தேர்வுகள் மற்றும் சீரமைப்புகளுடன் முரண்படுகிறதா என்று சோதிக்கிறது ...\n",
   "quote_invalid": "Invalid Original Language Quote for Check: '${quote}'",
   "nothing_to_select_description": "When selected, the check will be marked as complete. Use when the translation is correct but a selection cannot be made.",
-  "selections_invalidated": "Some selections are no longer valid and are removed.",
-  "see_more": "See more",
-  "select": "Select",
-  "step2_check": "Step 2. Check",
-  "comment": "Comment",
-  "edit_verse": "Edit Verse",
-  "save_previous": "Save & Previous",
-  "save_continue": "Save & Continue",
+  "selections_invalidated": "சில தேர்வுகள் இனி செல்லுபடியாகாது, அவை அகற்றப்படும்.\n",
+  "see_more": "மேலும் பார்க்க\n",
+  "select": "தேர்ந்தெடு",
+  "step2_check": "இரண்டாவது படி. சரிபார்க்கவும்\n",
+  "comment": "கருத்து",
+  "edit_verse": "வசனத்தைத் திருத்து\n",
+  "save_previous": "சேமி & முந்தைய",
+  "save_continue": "சேமிக்கவும் தொடரவும்",
   "empty_verse": "No selection can be made because the verse is blank.<br/>You may fix this by editing the verse.<br/>If desired, you may also leave a comment or bookmark this check.",
-  "no_selection": "No selection has been made.<br/>Click the Select button, then select the translation for this check.",
+  "no_selection": "தேர்வு எதுவும் செய்யப்படவில்லை. தேர்ந்தெடு பொத்தானைக் கிளிக் செய்து, இந்த காசோலைக்கான மொழிபெயர்ப்பைத் தேர்ந்தெடுக்கவும்.\n",
   "no_selection_needed_description": "No selection has been made.<br/>This check has been marked as:",
   "no_selection_needed": "No selection needed",
-  "please_select": "Please select the translation for:",
+  "please_select": "இதற்கான மொழிபெயர்ப்பைத் தேர்ந்தெடுக்கவும்:\n",
   "selection_invalidated": "The selection for this check was invalidated.",
   "invalidated_tooltip": "A selection is invalidated if the words selected were then edited.",
-  "translated_as": "has been translated as:",
-  "bookmark": "Bookmark",
-  "cancel": "Cancel",
-  "clear_selection": "Clear Selection",
-  "save": "Save",
-  "spelling": "Spelling",
-  "punctuation": "Punctuation",
-  "word_choice": "Word Choice",
-  "meaning": "Meaning",
-  "grammar": "Grammar",
-  "other": "Other",
+  "translated_as": "என மொழிபெயர்க்கப்பட்டுள்ளது\n",
+  "bookmark": "புக்மார்க்",
+  "cancel": "ரத்துசெய்",
+  "clear_selection": "தெளிவான தேர்வு",
+  "save": "சேமிக்கவும்",
+  "spelling": "எழுத்துப்பிழை",
+  "punctuation": "நிறுத்தற்குறி\n",
+  "word_choice": "சொல் தேர்வு",
+  "meaning": "பொருள்\n",
+  "grammar": "இலக்கணம்",
+  "other": "பிற",
   "select_reasons": "Select reason(s) for change",
   "edit_verse_title": "Edit Verse - ${passage}",
-  "next_change_reason": "Next, select reason(s) for change",
-  "first_make_change": "First, make changes to verse above",
-  "close": "Close",
-  "load": "Load",
-  "attention": "Attention:",
+  "next_change_reason": "அடுத்து, மாற்றத்திற்கான காரணத்தை (களை) தேர்ந்தெடுக்கவும்\n",
+  "first_make_change": "முதலில், மேலே உள்ள வசனத்தில் மாற்றங்களைச் செய்யுங்கள்\n",
+  "close": "மூடுவும்",
+  "load": "ஏற்று",
+  "attention": "கவனத்திற்கு",
   "select_translation": "Please ${span} select ${span} the correct translation for your current check.",
   "can_skip": "If you are unable to perform this check, you may ${span} skip it ${span} and come back to it later.",
-  "skip": "Skip",
+  "skip": "தாவிச்செல்",
   "click_show_expanded": "Click to show expanded verses",
   "expand_verses": "Expand verses",
   "pre_release": "Pre-release",
@@ -76,7 +119,7 @@
   "select_too_many": "Click a previous selection to remove it before adding a new one. To select more than ${maximum} words, highlight phrases instead of individual words.",
   "oops": "Oops!",
   "pane": {
-    "current_project": "Current project",
+    "current_project": "தற்போதைய திட்டம்",
     "missing_verse_warning": "[WARNING: This Bible version does not include text for this reference.]",
     "title": "Step 1. Read",
     "expand_hover": "Click to show expanded resource panes",
@@ -84,30 +127,30 @@
     "remove_resource_label": "Remove resource",
     "add_resource": "Click to add a resource",
     "add_resource_label": "Add Resources",
-    "select_language": "Select language",
-    "gateway_language": "Gateway Language",
-    "target_language": "Target Language",
-    "original_language": "Original Language",
-    "select_font_label": "Select Font"
+    "select_language": "மொழிகளைத் தேர்ந்தெடு",
+    "gateway_language": "நுழைவாயில் மொழி",
+    "target_language": "இலக்கு மொழி",
+    "original_language": "அசல் மொழி",
+    "select_font_label": "எழுத்துரு தேர்ந்தெடு"
   },
   "lemma": "Lemma:",
-  "morphology": "Morphology:",
-  "strongs": "Strongs:",
-  "lexicon": "Lexicon:",
-  "noun": "Noun",
+  "morphology": "உருவவியல்",
+  "strongs": "வலுவானது",
+  "lexicon": "லெக்சிகன்",
+  "noun": "பெயர்சொல்",
   "substantive_adj": "Substantive adj.",
   "predicate_adj": "Predicate adj.",
-  "nominative": "Nominative",
+  "nominative": "பெயரிடப்பட்ட",
   "genitive": "Genitive",
   "dative": "Dative",
-  "accusative": "Accusative",
+  "accusative": "குற்றச்சாட்டு",
   "vocative": "Vocative",
   "masculine": "Masculine",
   "feminine": "Feminine",
   "neuter": "Neuter",
   "singular": "Singular",
   "plural": "Plural",
-  "adjective": "Adjective",
+  "adjective": "அடைமொழி",
   "ascriptive": "Ascriptive",
   "restrictive": "Restrictive",
   "determiner": "Determiner",
