--- a/src/data/locales/French-fr_FR.json
+++ b/src/data/locales/French-fr_FR.json
@@ -8,7 +8,8 @@
     "verse_edit": "Édition de verset",
     "comments": "Commentaires",
     "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "grouping": "Organiser par référence",
+    "select_locale": "Sélectionner la localisation"
   },
   "buttons": {
     "ok_button": "Ok",
@@ -17,7 +18,49 @@
     "reset_button": "Réinitialiser",
     "save_button": "Sauvegarder",
     "next_button": "Suivant",
-    "discard_changes": "Abandonner les modifications"
+    "discard_changes": "Abandonner les modifications",
+    "close_button": "Fermer",
+    "yes_button": "OUI",
+    "no_button": "NON"
+  },
+  "prompts": {
+    "createNewOlCheck": "Créer un nouveau projet de vérification",
+    "downloadCatalog": "Voulez-vous télécharger le catalogue en cours ?",
+    "selectTargetLanguage": "Sélectionnez la langue cible :",
+    "selectOrganization": "Sélectionnez l'organisation cible:",
+    "selectTargetBible": "Sélectionnez la Bible cible :",
+    "selectTargetBook": "Sélectionnez le livre de cible :",
+    "selectGatewayLanguage": "Sélectionnez la langue de vérification de la passerelle :",
+    "selectGatewayOwner": "Sélectionnez l'organisation de la langue de vérification de passerelle :"
+  },
+  "status": {
+    "downloadingCatalog": "Téléchargement du catalogue actuel",
+    "catalogDownloadError": "Erreur lors du téléchargement du catalogue de ressources mis à jour !",
+    "creatingCheckingProject": "Création du projet de vérification",
+    "noLanguage": "Aucune langue cible sélectionnée !",
+    "languageSelected": "Langue cible sélectionnée ${targetLanguagePick}",
+    "noOwner": "Aucun propriétaire de la cible sélectionné !",
+    "ownerSelected": "Bible cible sélectionnée ${targetOwnerPick}",
+    "noBible": "Aucune Bible cible sélectionnée !",
+    "bibleSelected": "Bible cible sélectionnée ${targetBibleIdPick}",
+    "noBook": "Aucune langue cible sélectionnée !",
+    "bookSelected": "Livre cible sélectionné ${targetBookPick}",
+    "noCheckingLanguage": "Aucune langue de vérification de passerelle sélectionnée !",
+    "glSelected": "Langue de vérification de passerelle  ${gwLanguagePick} sélectionnée",
+    "noGlOwner": "Aucune organisation de la langue de vérification de passerelle sélectionnée !",
+    "glOwnerSelected": "Vérification de passerelle de la langue de l'organisation sélectionnée  ${gwOwnerPick}",
+    "creatingProject": "Créer un nouveau projet de vérification",
+    "glResourceDownloadError": "Erreur lors du téléchargement des ressources de la langue de passerelle !",
+    "downloadingTargetBible": "Téléchargement de la Bible cible ${targetBible}",
+    "targetBibleDownloadError": "Erreur lors du téléchargement de la Bible cible !",
+    "errorCreatingProject": "Impossible de créer le projet de vérification",
+    "successCreatingProject": "Le projet a été initialisé avec succès à ${repoPath}",
+    "checkingInstructions": "Vous pouvez maintenant vérifier en ouvrant les vérifications translationWords dans les vérifications `checking/twl` ou translationNotes dans `checking/tn`",
+    "resourceMissing": "Vérification des ressources manquantes.",
+    "bibleMissing": "La bible cible est manquante pour ${bookId}.",
+    "invalidCheckingFile": "Fichier de vérification vide : ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Envoi vers ${url} réussi"
   },
   "alignments_reset_wa_tool": "Des changements ont été détectés dans votre projet qui ont invalidé certains de vos alignements.\nCes versets affichent une icône d'une chaîne cassée à côté de la référence dans le menu latéral.",
   "invalid_verse_alignments_and_selections": "Des changements ont été détectés dans votre projet qui ont invalidé certains de vos sélections et alignements.\nCes versets affichent une icône d'une chaîne cassée à côté de la référence dans le menu latéral.",
@@ -62,7 +105,7 @@
   "skip": "Sauter",
   "click_show_expanded": "Cliquez pour afficher les versets étendus",
   "expand_verses": "Développer les versets",
-  "pre_release": "Pre-release",
+  "pre_release": "Pré-publication",
   "icons": {
     "selections_found": "Des sélections ont été trouvées pour cette vérification",
     "no_selections_found": "Aucune sélection n'a été trouvée pour cette vérification",
@@ -131,9 +174,9 @@
   "verb": "Verbe",
   "transitive": "Transitif",
   "intransitive": "Intransitif",
-  "any": "Any",
-  "extraneous": "Extraneous",
-  "substantive_adjective": "Substantive Adjective",
+  "any": "N'importe laquelle",
+  "extraneous": "Externe",
+  "substantive_adjective": "Adjectif substantiel",
   "linking": "Reliant",
   "modal": "Modal",
   "periphrastic": "Périphrastique",
@@ -163,66 +206,66 @@
   "conjunction": "Conjonction",
   "coordinating": "Qui coordonne",
   "subordinating": "Qui subordonne",
-  "particle": "Particle",
-  "foreign": "Foreign",
+  "particle": "Particule",
+  "foreign": "Étranger",
   "error": "Erreur",
-  "comparative": "Comparative",
-  "superlatives": "Superlative",
-  "indeclinable": "Indeclinable",
-  "diminutive": "Diminutive",
-  "suffix": "Suffix",
-  "cardinal_number": "Cardinal Number",
-  "gentilic": "Gentilic",
-  "ordinal_number": "Ordinal Number",
-  "both_genders": "Both Genders",
-  "common_gender": "Common Gender",
-  "common": "Common",
-  "proper_name": "Proper Name",
-  "dual": "Dual",
+  "comparative": "Comparatif",
+  "superlatives": "Superlatif",
+  "indeclinable": "Invariable",
+  "diminutive": "Diminutif",
+  "suffix": "Suffixe",
+  "cardinal_number": "Nombre  cardinal",
+  "gentilic": "Gentilé",
+  "ordinal_number": "Nombre ordinal",
+  "both_genders": "Masculin et féminin ensemble",
+  "common_gender": "genre commun",
+  "common": "Commun",
+  "proper_name": "Nom propre",
+  "dual": "double",
   "affirmation": "Affirmation",
   "definite_article": "Article défini",
   "exhortation": "Exhortation",
-  "negative": "Négatif•ve",
-  "direct_object_marker": "Direct Object Marker",
-  "absolute": "Absolute",
-  "construct": "Construct",
-  "determined": "Determined",
-  "directional_he": "Directional He",
-  "paragogic_he": "Paragogic He",
-  "paragogic_nun": "Paragogic Nun",
+  "negative": "Négatif",
+  "direct_object_marker": "Marqueur d'objet direct",
+  "absolute": "Absolu",
+  "construct": "construit",
+  "determined": "Déterminé",
+  "directional_he": "Hé directionnel",
+  "paragogic_he": "Hé paragogique",
+  "paragogic_nun": "Nun paragogique",
   "pronominal": "Pronominal",
-  "perfect_qatal": "Perfect (Qatal)",
-  "sequential_perfect_weqatal": "Sequential Perfect (Weqatal)",
-  "imperfect_yiqtol": "Imperfect (Yiqtol)",
-  "sequential_imperfect_wayyiqtol": "Sequential Imperfect (Wayyiqtol)",
-  "cohortative": "Cohortative",
-  "jussive": "Jussive",
-  "participle_active": "Participle Active",
-  "participle_passive": "Participle Passive",
-  "infinitive_absolute": "Infinitive Absolute",
-  "infinitive_construct": "Infinitive Construct",
+  "perfect_qatal": "Accompli (qatal)",
+  "sequential_perfect_weqatal": "Accompli avec waw conversif (weqatal)",
+  "imperfect_yiqtol": "Inaccompli (yiqtol)",
+  "sequential_imperfect_wayyiqtol": "Inaccompli avec waw conversif (wayyiqtol)",
+  "cohortative": "Cohortatif",
+  "jussive": "Jussif",
+  "participle_active": "Participe actif",
+  "participle_passive": "Participe passif",
+  "infinitive_absolute": "Infinitif absolu",
+  "infinitive_construct": "Infinitif construit",
   "qal": "Qal",
   "niphal": "Niphal",
   "piel": "Piel",
-  "pual": "Pual",
+  "pual": "Poual",
   "hiphil": "Hiphil",
   "hophal": "Hophal",
   "hithpael": "Hithpael",
-  "hithpolel": "Hithpolel",
+  "hithpolel": "Hithpalel",
   "polel": "Polel",
   "polal": "Polal",
   "poel": "Poel",
-  "poal": "Poal",
+  "poal": "Poal\n",
   "palel": "Palel",
   "pulal": "Pulal",
-  "qal_passive": "Qal passive",
+  "qal_passive": "Passif du qal",
   "pilpel": "Pilpel",
-  "polpal": "Polpal",
+  "polpal": "Pulpal",
   "hithpalpel": "Hithpalpel",
   "nithpael": "Nithpael",
   "pealal": "Pealal",
   "pilel": "Pilel",
-  "hothpaal": "Hothpaal",
+  "hothpaal": "Hothpael",
   "tiphil": "Tiphil",
   "hishtaphel": "Hishtaphel",
   "nithpalel": "Nithpalel",
@@ -238,7 +281,7 @@
   "haphel": "Haphel",
   "saphel": "Saphel",
   "shaphel": "Shaphel",
-  "ishtaphel": "Ishtaphel",
+  "ishtaphel": "Ichtaphel",
   "ithpeel": "Ithpeel",
   "hithaphel": "Hithaphel",
   "hephal": "Hephal",
