--- a/src/data/locales/Gujarati-gu_IN.json
+++ b/src/data/locales/Gujarati-gu_IN.json
@@ -8,20 +8,63 @@
     "verse_edit": "કલમ ઉમેરો",
     "comments": "ટિપ્પણી",
     "menu": "મેનુ",
-    "grouping": "Organize by Reference"
+    "grouping": "Organize by Reference",
+    "select_locale": "લોકેલ પસંદ કરો"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "બરાબર",
     "back_button": "પાછા જાઓ",
     "cancel_button": "રદ કરો",
-    "reset_button": "Reset",
+    "reset_button": "રીસૅટ ",
     "save_button": "સાચવો",
     "next_button": "આગામી",
-    "discard_changes": "ફેરફારોને કાઢી નાખો"
+    "discard_changes": "ફેરફારોને કાઢી નાખો",
+    "close_button": "બંધ કરો",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "તમારા પ્રોજેક્ટમાં ફેરફારો શોધી દેવામાં આવ્યા છે જેણે તમારી કેટલીક ગોઠવણીને અમાન્ય કરી દીધી છે.\nઆ કલમો તૂટેલી સાંકળનું એક ચિહ્ન બાજુના મેનુમાં સંદર્ભની પાસે બતાવે છે.",
+  "invalid_verse_alignments_and_selections": "તમારા પ્રોજેક્ટમાં ફેરફારો શોધી દેવામાં આવ્યા છે જેણે તમારી કેટલીક પસંદગી તથા ગોઠવણીને અમાન્ય કરી દીધા છે. આ કલમો તૂટેલી સાંકળનું એક ચિહ્ન બાજુના મેનુમાં સંદર્ભની પાસે બતાવે છે.",
+  "invalidation_checking": "આ ઉમેરો સાચવવામાં આવેલ પસંદગી અને ગોઠવણી સાથે તકરાર કરે છે કે નહીં તે તપાસી રહ્યું છે...",
   "quote_invalid": "અયોગ્ય મૂળ ભાષા જાણવા માટે તપાસો: '${quote}'",
   "nothing_to_select_description": "જ્યારે પસંદ કર્યું હશે, ત્યારે તપાસને પૂર્ણ થયેલ એમ બતાવશે. જ્યારે અનુવાદ ખરું હોય ત્યારે ઉપયોગ કરો પરંતુ પસંદગી કરી શકાશે નહીં.",
   "selections_invalidated": "કેટલીક પસંદગી માન્ય નથી અને તેને દૂર કરવામાં આવી છે.",
@@ -131,7 +174,7 @@
   "verb": "ક્રિયાપદ",
   "transitive": "સકર્મક",
   "intransitive": "અકર્મક",
-  "any": "Any",
+  "any": "કોઈપણ",
   "extraneous": "Extraneous",
   "substantive_adjective": "Substantive Adjective",
   "linking": "લિંક થઈ રહ્યું છે",
