--- a/src/data/locales/Marathi-mr_IN.json
+++ b/src/data/locales/Marathi-mr_IN.json
@@ -8,20 +8,63 @@
     "verse_edit": "वचन संपादित करा",
     "comments": "टिप्पण्या",
     "menu": "सूची",
-    "grouping": "Organize by Reference"
+    "grouping": "Organize by Reference",
+    "select_locale": "स्थानिक निवडा"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "ठीक",
     "back_button": "मागे जा",
     "cancel_button": "रद्द करणे",
-    "reset_button": "Reset",
+    "reset_button": "रीसेट",
     "save_button": "जतन करणे",
     "next_button": "पुढील",
-    "discard_changes": "बदल रद्द करा"
+    "discard_changes": "बदल रद्द करा",
+    "close_button": "बंद करा",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "तुमच्या प्रकल्पात बदल आढळले आहेत ज्याने आपल्या काही संरेखनांना अवैध केले आहे.\nही वचने बाजूच्या सूचीमधील संदर्भाच्या पुढे खंडित साखळीचे चिन्ह प्रदर्शित करतात.",
+  "invalid_verse_alignments_and_selections": "तुमच्या प्रकल्पात बदल आढळले आहेत ज्याने काही निवड आणि काही संरेखन अवैध केले आहेत. ही वचने बाजूच्या सूचीमधील संदर्भाच्या पुढे खंडित साखळीचे चिन्ह प्रदर्शित करतात.",
+  "invalidation_checking": "हे संपादन जतन केलेल्या निवडी आणि संरेख्यांसह विरोधाभास आहे का हे तपासत आहे ...",
   "quote_invalid": "अवैध मूळ भाषा अवतरण तपासासाठी: '${quote}'",
   "nothing_to_select_description": "निवडल्यास, तपास पूर्ण म्हणून चिन्हांकित केले जाईल. जेव्हा भाषांतर योग्य असेल तेव्हा वापरा परंतु निवडी केली जाऊ शकत नाही.",
   "selections_invalidated": "काही निवडी यापुढे वैध नाहीत आणि काढल्या जातात.",
@@ -66,8 +109,8 @@
   "icons": {
     "selections_found": "या तपासासाठी निवडी सापडल्या",
     "no_selections_found": "या तपासासाठी निवडी सापडल्या नाहीत",
-    "verse_edits_found": "या तपासासाठी वचने सापडली",
-    "no_verse_edits_found": "या तपासासाठी वचने सापडली नाहीत",
+    "verse_edits_found": "या तपासणीसाठी संपादित वचने आढळली",
+    "no_verse_edits_found": "या तपासणीसाठी संपादित वचने आढळली नाहीत",
     "comments_found": "या तपासासाठी टिप्पण्या सापडल्या",
     "no_comments_found": "या तपासासाठी टिप्पण्या सापडल्या नाहीत",
     "bookmarked": "या तपासणीला पुनरावलोकनासाठी वाचनखुणा केल्या गेल्या आहेत",
@@ -88,7 +131,7 @@
     "gateway_language": "गेटवे भाषा",
     "target_language": "लक्षित भाषा",
     "original_language": "मूळ भाषा",
-    "select_font_label": "Select Font"
+    "select_font_label": "सिलेक्ट फॉन्ट"
   },
   "lemma": "लेम्मा:",
   "morphology": "नमुनाशास्त्र:",
@@ -131,7 +174,7 @@
   "verb": "क्रियापद",
   "transitive": "सकर्मक",
   "intransitive": "अकर्मक",
-  "any": "Any",
+  "any": "कोणतेही",
   "extraneous": "Extraneous",
   "substantive_adjective": "Substantive Adjective",
   "linking": "दुवा",
@@ -163,7 +206,7 @@
   "conjunction": "उभयान्वयी अव्यय",
   "coordinating": "समन्वय",
   "subordinating": "संयोजन",
-  "particle": "कमी महत्वाच्या जातीचा शब्द (व्याकरणामध्ये) ",
+  "particle": "कमी महत्वाच्या जातीचा शब्द (व्याकरणामध्ये)",
   "foreign": "परराष्ट्रीय",
   "error": "त्रुटी",
   "comparative": "तुलनात्मक",
