--- a/src/data/locales/Portuguese, Brazilian-pt_BR.json
+++ b/src/data/locales/Portuguese, Brazilian-pt_BR.json
@@ -8,7 +8,8 @@
     "verse_edit": "Edição do versículo",
     "comments": "Comentários",
     "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "grouping": "Organizar por Referência",
+    "select_locale": "Selecionar localização"
   },
   "buttons": {
     "ok_button": "Ok",
@@ -17,7 +18,49 @@
     "reset_button": "Redefinir",
     "save_button": "Salvar",
     "next_button": "Próximo",
-    "discard_changes": "Descartar Alterações"
+    "discard_changes": "Descartar Alterações",
+    "close_button": "Fechar",
+    "yes_button": "SIM",
+    "no_button": "NÃO"
+  },
+  "prompts": {
+    "createNewOlCheck": "Criar novo projeto verificando",
+    "downloadCatalog": "Deseja baixar o catálogo atual?",
+    "selectTargetLanguage": "Selecione o idioma alvo:",
+    "selectOrganization": "Selecione a Organização Alvo:",
+    "selectTargetBible": "Selecione a Bíblia do Alvo:",
+    "selectTargetBook": "Selecione o Livro de Alvo:",
+    "selectGatewayLanguage": "Selecione o idioma de checagem do Gateway:",
+    "selectGatewayOwner": "Selecione a Gateway Verificando Organização de Idioma:"
+  },
+  "status": {
+    "downloadingCatalog": "Baixando o catálogo atual",
+    "catalogDownloadError": "Erro ao Baixar Catálogo de Recursos Atualizado!",
+    "creatingCheckingProject": "Criando Verificando projeto",
+    "noLanguage": "Nenhum Idioma de Destino selecionado!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "Nenhum Proprietário do Alvo selecionado!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "Nenhuma Bíblia de Destino selecionada!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "Nenhum Livro Alvo selecionado!",
+    "bookSelected": "Livro Alvo Selecionado ${targetBookPick}",
+    "noCheckingLanguage": "Nenhum Gateway Verificando idioma selecionado!",
+    "glSelected": "Checando Idioma Selecionado  ${gwLanguagePick}",
+    "noGlOwner": "Nenhum Gateway Verificando Organização de Idioma selecionado!",
+    "glOwnerSelected": "Gateway Verificando Organização de Idioma selecionado  ${gwOwnerPick}",
+    "creatingProject": "Criando Verificando projeto",
+    "glResourceDownloadError": "Erro ao baixar recursos de Idioma Gateway",
+    "downloadingTargetBible": "Baixando Bíblia Alvo ${targetBible}",
+    "targetBibleDownloadError": "Erro ao baixar a Bíblia de destino!",
+    "errorCreatingProject": "Falha ao Criar Projeto Verificando",
+    "successCreatingProject": "Projeto inicializado com sucesso no ${repoPath}",
+    "checkingInstructions": "Agora você pode fazer a verificação, abrindo verificações de translationWords em `checking/twl` ou translationNotes em `checking/tn`",
+    "resourceMissing": "Verificando recursos faltando.",
+    "bibleMissing": "Bíblia de alvo está faltando em ${bookId}.",
+    "invalidCheckingFile": "Arquivo de verificações vazio: ${checksPath}",
+    "uploadError": "${message}. Repo está em ${url}",
+    "uploadSuccess": "Upload de sucesso para ${url}"
   },
   "alignments_reset_wa_tool": "Foram detectadas alterações no seu projeto que invalidam alguns dos seus alinhamentos.\nOs versículos alterados têm o ícone de corrente quebrada ao lado da referência no menu lateral.",
   "invalid_verse_alignments_and_selections": "Alterações foram detectadas em seu projeto que invalidaram alguns de seus alinhamentos. Esses versículos apresentam um ícone de corrente quebrada ao lado da referência no menu lateral.",
@@ -34,7 +77,7 @@
   "save_continue": "Salvar e Continuar",
   "empty_verse": "Nenhuma seleção pode ser feita porque o versículo está em branco.<br/>Você pode corrigir isso através da edição do versículo.<br/>Se desejar, você também pode deixar um comentário ou marcar esta verificação.",
   "no_selection": "Nenhuma seleção foi feita.<br/>Clique no botão Selecionar e selecione a tradução para essa verificação.",
-  "no_selection_needed_description": "Nenhuma seleção foi feita. Esta verificação foi marcada como:",
+  "no_selection_needed_description": "Nenhuma seleção foi feita. <br/> Esta verificação foi marcada como:",
   "no_selection_needed": "Nenhuma seleção necessária",
   "please_select": "Por favor, selecione a tradução para:",
   "selection_invalidated": "A seleção para essa verificação foi invalidada.",
@@ -62,7 +105,7 @@
   "skip": "Ignorar",
   "click_show_expanded": "Clique para mostrar os versículos expandidos",
   "expand_verses": "Expandir versículos",
-  "pre_release": "Pre-release",
+  "pre_release": "Pré-lançamento",
   "icons": {
     "selections_found": "Foram encontradas seleções para esta verificação",
     "no_selections_found": "Nenhuma seleção foi encontrada para essa verificação",
@@ -131,9 +174,9 @@
   "verb": "Verbo",
   "transitive": "Transitivo",
   "intransitive": "Intransitivo",
-  "any": "Any",
-  "extraneous": "Extraneous",
-  "substantive_adjective": "Substantive Adjective",
+  "any": "Qualquer",
+  "extraneous": "Extraordinário",
+  "substantive_adjective": "Adjetivo Substantivo",
   "linking": "De Ligação",
   "modal": "Modal",
   "periphrastic": "Perifrástico",
