Fix to not download GLs from Door43-Catalog. Fix for when download Url is from different org. Cleanup default string in translate.  Fix for createNewOlCheck error reporting.

--- a/src/data/locales/English-en_US.json
+++ b/src/data/locales/English-en_US.json
@@ -54,7 +54,9 @@
     "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
     "targetBibleDownloadError": "Error Downloading Target Bible!",
     "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
     "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
     "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
     "resourceMissing": "Checking resources missing.",
     "bibleMissing": "Target bible missing for ${bookId}.",
